# memweb

./: Cargo.toml  LICENSE  README.md  install-service.sh  uninstall-service.sh  websocket_client_tester.py
client/: Cargo.toml  index.html
client/assets/: sw.js
client/src/: app.rs  lib.rs  main.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs  memory.rs  session.rs
shared/: Cargo.toml
shared/src/: compression.rs  lib.rs  process.rs  protocol.rs
shared/src/helpers/: memweb.rs  mod.rs  tcpmem.rs
shared/src/protocol/: mod.rs  read_primitives.rs  write_primitives.rs
src/: lib.rs  main.rs  memory.rs  parser.rs
wasm_lib/: Cargo.toml  README.md
wasm_lib/src/: lib.rs
