[package]
name = "memweb-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "libmemwebservice"

[dependencies]
env_logger = "0.10.0"
errno = "0.2.8"
futures-util = "0.3.25"
libc = "0.2.139"
log = "0.4.17"
tokio = {version = "1.25.0", features = ["full"]}
tokio-tungstenite = "0.18.0"
