[package]
name = "memweb-service"
version = "0.1.0"
authors = ["TheGreenPlanet"]
edition = "2021"

[[bin]]
name = "memweb"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.0"
errno = "0.2.8"
libc = "0.2.139"
log = "0.4.17"
tungstenite = "0.18.0"
shared = { version = "0.1.0", path = "../shared" }

[features]
fake_read_write = []