[package]
name = "memweb"
version = "0.1.0"
authors = ["TheGreenPlanet"]
edition = "2021"

[[bin]]
name = "memweb"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.2"
log = "0.4.20"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
errno = "0.3.8"
libc = "0.2.152"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.9.0", features = ["full"] }
tungstenite = "0.21.0"

[features]
fake_read_write = []
