[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.16.0"
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
errno = "0.3.3"
